tests/positive/basic/eol_constant/input.ci
void main() {
    print("hello" + EOL + "world" + EOL);
}
