tests/negative/semantic/assign_predefined_constant/input.ci
void main() {
    INT_MAX = 1;
}
